--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,11 +12,41 @@
     <div th:replace="~{ nav.html::navbar}"></div>
 
     <div class="post" th:each="post : ${posts}">
-
-        <h3 th:text="${post.title}">title</h3>
-        <a th:href="@{ '/detail/' + ${post.id} }">aaaaaaa</a>
-        <p th:text="${'auth : '+post.author}">author</p>
-        <p th:text="${'date : '+post.date}">date</p>
+        <a th:href="@{ '/detail/' + ${post.id} }">
+            <h3 th:text="${post.title}">title</h3>
+            <p th:text="${'auth : '+post.author}">author</p>
+            <p th:text="${'date : '+post.date}">date</p>
+        </a>
+        <button th:attr="onclick=|window.location.href='/edit/' + ${post.id}|" >Edit</button>
+        <button th:attr="onclick=|deletePost(${post.id})|">Delete</button>
     </div>
+
+    <script>
+        function deletePost(id){
+            if (!confirm("Are you sure you want to delete this post?")) {
+                return;
+            }
+
+            fetch('/delete', {
+                method: 'DELETE',
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ id: id.toString() })
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to delete post');
+                    }
+                    return response.text();
+                })
+                .then(() => {
+                    window.location.reload();
+                })
+                .catch(error => {
+                    alert("Error deleting post: " + error.message);
+                });
+        }
+    </script>
 </body>
 </html>
