--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>List</title>
     <link href="/main.css" rel="stylesheet">
 </head>
@@ -23,7 +20,7 @@
 
     <script>
         function deletePost(id){
-            if (!confirm("Are you sure you want to delete this post?")) {
+            if (!confirm("게시글을 삭제하시겠습니까?")) {
                 return;
             }
 
